tests/snapshots/regression/recovery__t16_handle_missing_lbrace_contextual.snap
---
source: tests/integration/regression_snapshots.rs
assertion_line: 132
---
$ flux --no-cache tests/fixtures/recovery/t16_handle_missing_lbrace_contextual.flx
exit_code: 1

[ 1 of 11] Compiling  Assert
[ 2 of 11] Compiling  Array
[ 3 of 11] Compiling  List
[ 4 of 11] Compiling  Either
[ 5 of 11] Compiling  IO
[ 6 of 11] Compiling  Math
[ 7 of 11] Compiling  Numeric
[ 8 of 11] Compiling  Option
[ 9 of 11] Compiling  Primops
[10 of 11] Compiling  String
• 1 error • tests/fixtures/recovery/t16_handle_missing_lbrace_contextual.flx
error[E034]: Unexpected Token

Expected `{` to begin `handle` arms.

  tests/fixtures/recovery/t16_handle_missing_lbrace_contextual.flx:1:21
  |
1 | let x = 1 handle IO print(resume, msg) -> resume(msg)
  |                     ^^^^^

Hint:
  Handle expressions use `expr handle Effect { ... }`.

Note:
  while parsing `handle` expression
  Suppressed 1 cascading parser diagnostic(s) likely caused by an earlier syntax error.
